--- a/Feijoada.html
+++ b/Feijoada.html
@@ -56,9 +56,9 @@
     <main>
         <!-- section conteudo receita pra mobile -->
         <section id="conteudo-moba">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
-            <!-- accordion contendo o passo a passo e ingredientes -->
+            <h1 class="central">Como Fazer Feijoada:</h1>
+            <img src="imagens/Feijoada.jpg" alt="" class="img_rec">
+            <!-- accordion com ingredientes e Passo a passo -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
@@ -69,38 +69,38 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- ingredientes para massa -->
-                            <h5>Massa:</h5>
+                            <!-- ingredientes para 8 porções -->
+                            <h5>8 porções</h5>
                             <ul>
-                                <li>4 tabletes de fermento biológico fresco (60 g)
+                                <li>1 kg de feijão preto
                                 </li>
-                                <li>1 colher (sopa) de açúcar
+                                <li>2 línguas defumadas ou salgadas
                                 </li>
-                                <li>2 xícaras (chá) de leite (400 ml)
+                                <li>1 kg de carne seca
                                 </li>
-                                <li>1 xícara (chá) de óleo
+                                <li>1/2 kg de costelinha de porco salgada
                                 </li>
-                                <li>Sal a vontade
+                                <li>1/2 kg de lombo de porco salgado
                                 </li>
-                                <li>aproximadamente 1 kg de farinha de trigo
+                                <li>1/2 kg de lingüiça calabresa defumada
                                 </li>
-                            </ul>
-                            <!-- ingredinetes para recheio -->
-                            <h5>Recheio:</h5>
-                            <ul>
-                                <li>500 g de carne moída (patinho ou fraldinha)
+                                <li>1/4 kg de toucinho defumado
                                 </li>
-                                <li>1 cebola grande bem picada
+                                <li>2 pés de porco salgados
                                 </li>
-                                <li>1 xícara (chá) de salsa e cebolinha verde picadas
+                                <li>1 rabo de porco salgado
                                 </li>
-                                <li>1 colher (sopa) de hortelã picada
+                                <li>2 orelhas de porco salgadas
                                 </li>
-                                <li>1 tomate grande sem sementes picado
+                                <li>3 cebolas cortadas em cubos
                                 </li>
-                                <li>2 colheres (sopa) de suco de limão
+                                <li>3 dentes de alho picados
                                 </li>
-                                <li>Sal e pimenta-do-reino a gosto
+                                <li>4 folhas de louro
+                                </li>
+                                <li>Pimenta malagueta amassada (opcional)
+                                </li>
+                                <li>1/2 xícara de óleo ou banha de porco
                                 </li>
                             </ul>
                         </div>
@@ -110,34 +110,35 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <!-- modo de preparo -->
                             <h3>Modo de Preparo</h3>
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- modo de preparo -->
                             <h5>Modo de preparo</h5>
                             <ol>
-                                <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                <li>deixe o feijão de molho por 12 horas.
                                 </li>
-                                <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                <li>Lave bem as carnes salgadas, corte em pedaços e deixe de molho em água por 12 horas,
+                                    trocando a água pelo menos duas vezes.
                                 </li>
-                                <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                    farinha, até desgrudar das mãos.
+                                <li>Coloque o feijão para cozinhar em bastante água com as folhas de louro.
                                 </li>
-                                <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                <li>Em uma panela à parte, cozinhe por ½ hora as carnes salgadas, escorra a água e
+                                    reserve.
                                 </li>
-                                <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                <li>Quando o feijão estiver começando a amolecer, coloque as carnes, a lingüiça e o paio
+                                    e deixe ferver em fogo brando até estar tudo bem cozido (leva algum tempo: de 2 a 3
+                                    horas).
                                 </li>
-                                <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes e
-                                    deixe escorrer sobre uma peneira antes de utilizar.
+                                <li>Esquente o óleo ou banha de porco e refogue os temperos.
                                 </li>
-                                <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                <li>Coloque uma concha do feijão, amasse bem e deixe ferver despeje na feijoada e deixe
+                                    ferver por mais 30 minutos.
                                 </li>
-                                <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                    esfiha fechada).
-                                </li>
-                                <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos ou até dourarem.
+                                <li>Sirva bem quente acompanhado de couve picada fina e refogada, farinha de mandioca
+                                    crua, gomos de laranja e uma cerveja bem gelada.
                                 </li>
                             </ol>
                         </div>
@@ -147,8 +148,8 @@
         </section>
         <!-- section conteudo receita pra +600px -->
         <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Feijoada:</h1>
+            <img src="imagens/Feijoada.jpg" alt="" class="img_rec">
             <!-- article pra aplicar wrap -->
             <article class="flex_wrap">
                 <!-- accordion com ingredientes e Passo a passo -->
@@ -162,38 +163,38 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <!-- ingredientes pra massa -->
-                                <h5>Massa:</h5>
+                                <!-- ingredientes pra 8 porções -->
+                                <h5>8 porções</h5>
                                 <ul>
-                                    <li>4 tabletes de fermento biológico fresco (60 g)
+                                    <li>1 kg de feijão preto
                                     </li>
-                                    <li>1 colher (sopa) de açúcar
+                                    <li>2 línguas defumadas ou salgadas
                                     </li>
-                                    <li>2 xícaras (chá) de leite (400 ml)
+                                    <li>1 kg de carne seca
                                     </li>
-                                    <li>1 xícara (chá) de óleo
+                                    <li>1/2 kg de costelinha de porco salgada
                                     </li>
-                                    <li>Sal a vontade
+                                    <li>1/2 kg de lombo de porco salgado
                                     </li>
-                                    <li>aproximadamente 1 kg de farinha de trigo
+                                    <li>1/2 kg de lingüiça calabresa defumada
                                     </li>
-                                </ul>
-                                <!-- ingredientes pro recheio -->
-                                <h5>Recheio:</h5>
-                                <ul>
-                                    <li>500 g de carne moída (patinho ou fraldinha)
+                                    <li>1/4 kg de toucinho defumado
                                     </li>
-                                    <li>1 cebola grande bem picada
+                                    <li>2 pés de porco salgados
                                     </li>
-                                    <li>1 xícara (chá) de salsa e cebolinha verde picadas
+                                    <li>1 rabo de porco salgado
                                     </li>
-                                    <li>1 colher (sopa) de hortelã picada
+                                    <li>2 orelhas de porco salgadas
                                     </li>
-                                    <li>1 tomate grande sem sementes picado
+                                    <li>3 cebolas cortadas em cubos
                                     </li>
-                                    <li>2 colheres (sopa) de suco de limão
+                                    <li>3 dentes de alho picados
                                     </li>
-                                    <li>Sal e pimenta-do-reino a gosto
+                                    <li>4 folhas de louro
+                                    </li>
+                                    <li>Pimenta malagueta amassada (opcional)
+                                    </li>
+                                    <li>1/2 xícara de óleo ou banha de porco
                                     </li>
                                 </ul>
                             </div>
@@ -205,7 +206,6 @@
                         <h3 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseTwo" aria-controls="collapseTwo">
-                                <!-- passo a passo receita -->
                                 <h3>Modo de Preparo</h3>
                             </button>
                         </h3>
@@ -213,27 +213,32 @@
                             <div class="accordion-body">
                                 <h5>Modo de preparo</h5>
                                 <ol>
-                                    <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                    <li>deixe o feijão de molho por 12 horas.
                                     </li>
-                                    <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                    <li>Lave bem as carnes salgadas, corte em pedaços e deixe de molho em água por 12
+                                        horas,
+                                        trocando a água pelo menos duas vezes.
                                     </li>
-                                    <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                        farinha, até desgrudar das mãos.
+                                    <li>Coloque o feijão para cozinhar em bastante água com as folhas de louro.
                                     </li>
-                                    <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                    <li>Em uma panela à parte, cozinhe por ½ hora as carnes salgadas, escorra a água e
+                                        reserve.
                                     </li>
-                                    <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                    <li>Quando o feijão estiver começando a amolecer, coloque as carnes, a lingüiça e o
+                                        paio
+                                        e deixe ferver em fogo brando até estar tudo bem cozido (leva algum tempo: de 2
+                                        a 3
+                                        horas).
                                     </li>
-                                    <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes
-                                        e deixe escorrer sobre uma peneira antes de utilizar.
+                                    <li>Esquente o óleo ou banha de porco e refogue os temperos.
                                     </li>
-                                    <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                    <li>Coloque uma concha do feijão, amasse bem e deixe ferver despeje na feijoada e
+                                        deixe
+                                        ferver por mais 30 minutos.
                                     </li>
-                                    <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                        esfiha fechada).
-                                    </li>
-                                    <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos
-                                        ou até dourarem.
+                                    <li>Sirva bem quente acompanhado de couve picada fina e refogada, farinha de
+                                        mandioca
+                                        crua, gomos de laranja e uma cerveja bem gelada.
                                     </li>
                                 </ol>
                             </div>
