--- a/MaioneseVerde.html
+++ b/MaioneseVerde.html
@@ -56,51 +56,38 @@
     <main>
         <!-- section conteudo receita pra mobile -->
         <section id="conteudo-moba">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
-            <!-- accordion contendo o passo a passo e ingredientes -->
+            <h1 class="central">Como Fazer Maionese Verde:</h1>
+            <img src="imagens/Maionese verde.jpg" alt="" class="img_rec">
+            <!-- accordion passo a passo e ingredientes -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <!-- ingredientes maionese -->
                             <h3>Ingredientes:</h3>
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- ingredientes para massa -->
-                            <h5>Massa:</h5>
+                            <h5>Maionese Verde:
+                            </h5>
                             <ul>
-                                <li>4 tabletes de fermento biológico fresco (60 g)
+                                <li>1 colher de chá de sal
                                 </li>
-                                <li>1 colher (sopa) de açúcar
+                                <li>2 ovos
                                 </li>
-                                <li>2 xícaras (chá) de leite (400 ml)
+                                <li>Salsinha e cebolinha picadas a gosto
                                 </li>
-                                <li>1 xícara (chá) de óleo
+                                <li>1 colher de sopa de suco de limão puro
                                 </li>
-                                <li>Sal a vontade
+                                <li>1 colher de chá de mostarda
                                 </li>
-                                <li>aproximadamente 1 kg de farinha de trigo
+                                <li>Pimenta-do-reino a gosto
                                 </li>
-                            </ul>
-                            <!-- ingredinetes para recheio -->
-                            <h5>Recheio:</h5>
-                            <ul>
-                                <li>500 g de carne moída (patinho ou fraldinha)
+                                <li>250 mililitros de óleo de soja
                                 </li>
-                                <li>1 cebola grande bem picada
-                                </li>
-                                <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                </li>
-                                <li>1 colher (sopa) de hortelã picada
-                                </li>
-                                <li>1 tomate grande sem sementes picado
-                                </li>
-                                <li>2 colheres (sopa) de suco de limão
-                                </li>
-                                <li>Sal e pimenta-do-reino a gosto
+                                <li>Sal a gosto
                                 </li>
                             </ul>
                         </div>
@@ -118,26 +105,18 @@
                             <!-- modo de preparo -->
                             <h5>Modo de preparo</h5>
                             <ol>
-                                <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                <li>Numa vasilha e com a ajuda de um batedor, coloque 2 ovos, 1 colher de sopa de suco
+                                    de limão puro, 1 colher de chá de mostarda e mexa bem. Você pode usar um mixer ou
+                                    liquidificador.
                                 </li>
-                                <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                <li>Sem parar de bater, despeje em fio 250 mililitros de óleo de soja.
                                 </li>
-                                <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                    farinha, até desgrudar das mãos.
+                                <li>Adicione salsinha e cebolinha picadas a gosto, e sal. Misture tudo mais uma vez.
                                 </li>
-                                <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                <li>Acrescente mais óleo para engrossar a maionese.
                                 </li>
-                                <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
-                                </li>
-                                <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes e
-                                    deixe escorrer sobre uma peneira antes de utilizar.
-                                </li>
-                                <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
-                                </li>
-                                <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                    esfiha fechada).
-                                </li>
-                                <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos ou até dourarem.
+                                <li>Desligue o liquidificador ou mixer e coloque em um pote e leve à geladeira. Se
+                                    desejar, sirva após o preparo com batatas, saladas e sanduíches.
                                 </li>
                             </ol>
                         </div>
@@ -145,55 +124,41 @@
                 </div>
             </div>
         </section>
-        <!-- section conteudo receita pra +600px -->
+        <!-- section conteudo receitas tablet e Desktop -->
         <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
-            <!-- article pra aplicar wrap -->
+            <h1 class="central">Como Fazer Maionese Verde:</h1>
+            <img src="imagens/Maionese verde.jpg" alt="" class="img_rec">
+            <!-- article pra colocar flex wrap -->
             <article class="flex_wrap">
-                <!-- accordion com ingredientes e Passo a passo -->
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-controls="collapseOne">
+                                <!-- ingredientes maionese verde -->
                                 <h3>Ingredientes:</h3>
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <!-- ingredientes pra massa -->
-                                <h5>Massa:</h5>
+                                <h5>Maionese Verde:
+                                </h5>
                                 <ul>
-                                    <li>4 tabletes de fermento biológico fresco (60 g)
+                                    <li>1 colher de chá de sal
                                     </li>
-                                    <li>1 colher (sopa) de açúcar
+                                    <li>2 ovos
                                     </li>
-                                    <li>2 xícaras (chá) de leite (400 ml)
+                                    <li>Salsinha e cebolinha picadas a gosto
                                     </li>
-                                    <li>1 xícara (chá) de óleo
+                                    <li>1 colher de sopa de suco de limão puro
                                     </li>
-                                    <li>Sal a vontade
+                                    <li>1 colher de chá de mostarda
                                     </li>
-                                    <li>aproximadamente 1 kg de farinha de trigo
+                                    <li>Pimenta-do-reino a gosto
                                     </li>
-                                </ul>
-                                <!-- ingredientes pro recheio -->
-                                <h5>Recheio:</h5>
-                                <ul>
-                                    <li>500 g de carne moída (patinho ou fraldinha)
+                                    <li>250 mililitros de óleo de soja
                                     </li>
-                                    <li>1 cebola grande bem picada
-                                    </li>
-                                    <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                    </li>
-                                    <li>1 colher (sopa) de hortelã picada
-                                    </li>
-                                    <li>1 tomate grande sem sementes picado
-                                    </li>
-                                    <li>2 colheres (sopa) de suco de limão
-                                    </li>
-                                    <li>Sal e pimenta-do-reino a gosto
+                                    <li>Sal a gosto
                                     </li>
                                 </ul>
                             </div>
@@ -205,35 +170,26 @@
                         <h3 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseTwo" aria-controls="collapseTwo">
-                                <!-- passo a passo receita -->
                                 <h3>Modo de Preparo</h3>
                             </button>
                         </h3>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <h5>Modo de preparo</h5>
+                                <!-- modo de preparo maionese -->
                                 <ol>
-                                    <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                    <li>Numa vasilha e com a ajuda de um batedor, coloque 2 ovos, 1 colher de sopa de
+                                        suco de limão puro, 1 colher de chá de mostarda e mexa bem. Você pode usar um
+                                        mixer ou liquidificador.
                                     </li>
-                                    <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                    <li>Sem parar de bater, despeje em fio 250 mililitros de óleo de soja.
                                     </li>
-                                    <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                        farinha, até desgrudar das mãos.
+                                    <li>Adicione salsinha e cebolinha picadas a gosto, e sal. Misture tudo mais uma vez.
                                     </li>
-                                    <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                    <li>Acrescente mais óleo para engrossar a maionese.
                                     </li>
-                                    <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
-                                    </li>
-                                    <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes
-                                        e deixe escorrer sobre uma peneira antes de utilizar.
-                                    </li>
-                                    <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
-                                    </li>
-                                    <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                        esfiha fechada).
-                                    </li>
-                                    <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos
-                                        ou até dourarem.
+                                    <li>Desligue o liquidificador ou mixer e coloque em um pote e leve à geladeira. Se
+                                        desejar, sirva após o preparo com batatas, saladas e sanduíches.
                                     </li>
                                 </ol>
                             </div>
@@ -244,7 +200,7 @@
         </section>
     </main>
     <footer>
-        <!-- footer links -->
+        <!-- links footer -->
         <h3 class="central">Links Uteis</h3>
         <br>
         <section id="footerLinks" class="d-flex justify-content-around">
