--- a/chickentikka.html
+++ b/chickentikka.html
@@ -56,8 +56,8 @@
     <main>
         <!-- section conteudo receita pra mobile -->
         <section id="conteudo-moba">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Chicken Tikka</h1>
+            <img src="imagens/Chicken tikka.jpg" alt="" class="img_rec">
             <!-- accordion contendo o passo a passo e ingredientes -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -69,38 +69,32 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- ingredientes para massa -->
-                            <h5>Massa:</h5>
+                            <!-- ingredientes para Chicken tikka -->
+                            <h5>8 unidades</h5>
                             <ul>
-                                <li>4 tabletes de fermento biológico fresco (60 g)
+                                <li>1 colher (chá) de gengibre ralado
                                 </li>
-                                <li>1 colher (sopa) de açúcar
+                                <li>2 dentes de alho cortados bem pequenos
                                 </li>
-                                <li>2 xícaras (chá) de leite (400 ml)
+                                <li>1 colher (chá) de coentro moído
                                 </li>
-                                <li>1 xícara (chá) de óleo
+                                <li>Pimenta preta, cominho e pimenta chili à gosto
                                 </li>
-                                <li>Sal a vontade
+                                <li>1 copo de iogurte natural
                                 </li>
-                                <li>aproximadamente 1 kg de farinha de trigo
+                                <li>1 colher (chá) de sal
                                 </li>
-                            </ul>
-                            <!-- ingredinetes para recheio -->
-                            <h5>Recheio:</h5>
-                            <ul>
-                                <li>500 g de carne moída (patinho ou fraldinha)
+                                <li>Suco de 1 limão
                                 </li>
-                                <li>1 cebola grande bem picada
+                                <li>1 colher (chá) de colorífico ou açafrão
                                 </li>
-                                <li>1 xícara (chá) de salsa e cebolinha verde picadas
+                                <li>1 colher (sopa) de extrato de tomate
                                 </li>
-                                <li>1 colher (sopa) de hortelã picada
+                                <li>1 kg de peito de frango em cubos
                                 </li>
-                                <li>1 tomate grande sem sementes picado
+                                <li>1 cebola média picada
                                 </li>
-                                <li>2 colheres (sopa) de suco de limão
-                                </li>
-                                <li>Sal e pimenta-do-reino a gosto
+                                <li>Óleo para fritar
                                 </li>
                             </ul>
                         </div>
@@ -118,26 +112,27 @@
                             <!-- modo de preparo -->
                             <h5>Modo de preparo</h5>
                             <ol>
-                                <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                <li>Misturar bem todos os temperos em uma tigela, onde você deixará o frango marinar por no mínimo 3 h.
                                 </li>
-                                <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                <li>Retire o frango do marinado raspando o excesso.
                                 </li>
-                                <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                    farinha, até desgrudar das mãos.
+                                <li>Aqueça o óleo e doure a cebola.
                                 </li>
-                                <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                <li>Frite o frango com a cebola.
                                 </li>
-                                <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                <li>Quando estiver dourado, acrescente o molho do marinado.
                                 </li>
-                                <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes e
-                                    deixe escorrer sobre uma peneira antes de utilizar.
+                                <li>Ajuste o sal e a pimenta à gosto.
                                 </li>
-                                <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                <li>Pode ajustar a cor, adicionando mais colorífico (mais vermelho) ou mais açafrão (mais amarelo).
                                 </li>
-                                <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                    esfiha fechada).
+                                <li>Deixe cozinhando em fogo baixo por 10 minutos.
                                 </li>
-                                <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos ou até dourarem.
+                                <li>Mexa para não queimar.
+                                </li>
+                                <li>Se achar pouco molho, acrescente o restante do iogurte natural.
+                                </li>
+                                <li>Sirva com arroz branco, pão sírio ou com a combinação que achar melhor.
                                 </li>
                             </ol>
                         </div>
@@ -147,8 +142,8 @@
         </section>
         <!-- section conteudo receita pra +600px -->
         <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Chicken Tikka</h1>
+            <img src="imagens/Chicken tikka.jpg" alt="" class="img_rec">
             <!-- article pra aplicar wrap -->
             <article class="flex_wrap">
                 <!-- accordion com ingredientes e Passo a passo -->
@@ -162,40 +157,34 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <!-- ingredientes pra massa -->
-                                <h5>Massa:</h5>
-                                <ul>
-                                    <li>4 tabletes de fermento biológico fresco (60 g)
-                                    </li>
-                                    <li>1 colher (sopa) de açúcar
-                                    </li>
-                                    <li>2 xícaras (chá) de leite (400 ml)
-                                    </li>
-                                    <li>1 xícara (chá) de óleo
-                                    </li>
-                                    <li>Sal a vontade
-                                    </li>
-                                    <li>aproximadamente 1 kg de farinha de trigo
-                                    </li>
-                                </ul>
-                                <!-- ingredientes pro recheio -->
-                                <h5>Recheio:</h5>
-                                <ul>
-                                    <li>500 g de carne moída (patinho ou fraldinha)
-                                    </li>
-                                    <li>1 cebola grande bem picada
-                                    </li>
-                                    <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                    </li>
-                                    <li>1 colher (sopa) de hortelã picada
-                                    </li>
-                                    <li>1 tomate grande sem sementes picado
-                                    </li>
-                                    <li>2 colheres (sopa) de suco de limão
-                                    </li>
-                                    <li>Sal e pimenta-do-reino a gosto
-                                    </li>
-                                </ul>
+                            <!-- ingredientes para Chicken tikka -->
+                            <h5>8 unidades</h5>
+                            <ul>
+                                <li>1 colher (chá) de gengibre ralado
+                                </li>
+                                <li>2 dentes de alho cortados bem pequenos
+                                </li>
+                                <li>1 colher (chá) de coentro moído
+                                </li>
+                                <li>Pimenta preta, cominho e pimenta chili à gosto
+                                </li>
+                                <li>1 copo de iogurte natural
+                                </li>
+                                <li>1 colher (chá) de sal
+                                </li>
+                                <li>Suco de 1 limão
+                                </li>
+                                <li>1 colher (chá) de colorífico ou açafrão
+                                </li>
+                                <li>1 colher (sopa) de extrato de tomate
+                                </li>
+                                <li>1 kg de peito de frango em cubos
+                                </li>
+                                <li>1 cebola média picada
+                                </li>
+                                <li>Óleo para fritar
+                                </li>
+                            </ul>
                             </div>
                         </div>
                     </div>
@@ -211,31 +200,32 @@
                         </h3>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <h5>Modo de preparo</h5>
-                                <ol>
-                                    <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
-                                    </li>
-                                    <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
-                                    </li>
-                                    <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                        farinha, até desgrudar das mãos.
-                                    </li>
-                                    <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
-                                    </li>
-                                    <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
-                                    </li>
-                                    <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes
-                                        e deixe escorrer sobre uma peneira antes de utilizar.
-                                    </li>
-                                    <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
-                                    </li>
-                                    <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                        esfiha fechada).
-                                    </li>
-                                    <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos
-                                        ou até dourarem.
-                                    </li>
-                                </ol>
+                                <!-- modo de preparo -->
+                            <h5>Modo de preparo</h5>
+                            <ol>
+                                <li>Misturar bem todos os temperos em uma tigela, onde você deixará o frango marinar por no mínimo 3 h.
+                                </li>
+                                <li>Retire o frango do marinado raspando o excesso.
+                                </li>
+                                <li>Aqueça o óleo e doure a cebola.
+                                </li>
+                                <li>Frite o frango com a cebola.
+                                </li>
+                                <li>Quando estiver dourado, acrescente o molho do marinado.
+                                </li>
+                                <li>Ajuste o sal e a pimenta à gosto.
+                                </li>
+                                <li>Pode ajustar a cor, adicionando mais colorífico (mais vermelho) ou mais açafrão (mais amarelo).
+                                </li>
+                                <li>Deixe cozinhando em fogo baixo por 10 minutos.
+                                </li>
+                                <li>Mexa para não queimar.
+                                </li>
+                                <li>Se achar pouco molho, acrescente o restante do iogurte natural.
+                                </li>
+                                <li>Sirva com arroz branco, pão sírio ou com a combinação que achar melhor.
+                                </li>
+                            </ol>
                             </div>
                         </div>
                     </div>
