--- a/jogo.html
+++ b/jogo.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" onclick="jump()">
 <head>
+    <meta charset="UTF-8">
+    <title>Jump Game</title>
+    <link rel="stylesheet" href="jogo.css">
     <meta name="description" content="receitas">
     <meta name="keywords" content="receitas">
     <meta name="author" content="Pietro Gimenez, Pedro Rodrigues, Pedro Zago">
@@ -14,7 +16,6 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
     <header>
         <!-- header responsivo -->
@@ -39,13 +40,13 @@
                                 <a class="nav-link mx-lg-2" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2 active" aria-current="page" href="sobre.html">Quem somos: </a>
+                                <a class="nav-link mx-lg-2" href="sobre.html">Quem somos: </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="contato.html">Contate-nos </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="jogo.html">jogo js</a>
+                                <a class="nav-link mx-lg-2 active" aria-current="page" href="jogo.html">jogo js</a>
                             </li>
                     </div>
                 </div>
@@ -53,74 +54,21 @@
             </div>
         </nav>
     </header>
-    <main id="ind">
-        <!-- conteudo pra mobile -->
-        <div id="conteudo-moba" class="quem">
-            <h1 class="central">Integrantes: </h1>
-            <!-- card Pietro Gimenez -->
-            <div class="card">
-                <img src="imagens/Pietro gimenez.jpg" class="d-block w-100 , card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pietro Gimenez</h5>
-                    <p class="card-text">Olá sou Pietro Gimenez e gosto de jogar, meu nivel em inglês é
-                        intermediario/avançado e estou cada vez mais tentando ser alguem melhor.</p>
-                </div>
-            </div>
-            <!-- card zago -->
-            <div class="card">
-                <img src="imagens/zago2.jpg" class="d-block w-100 , card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pedro Zago</h5>
-                    <p class="card-text">Aluno do ensino médio, Fatec, 15 anos de idade, nível avançado em inglês e
-                        intermediário em espanhol
-                    </p>
-                </div>
-            </div>
-            <!-- Pedro Rodrigues -->
-            <div class="card">
-                <img src="imagens/Rodruigues 2.jpg" class="d-block w-100 , card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pedro Rodrigues</h5>
-                    <p class="card-text">Aluno do ensino médio, Fatec, 15 anos de idade, nível intermediario em inglês e
-                        gosto de ler e jogar</p>
-                </div>
-            </div>
-        </div>
-        <!-- conteudo pra tablet e desktop -->
-        <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Integrantes: </h1>
-            <div class="flex_wrap">
-                <!-- card Pietro Gimenez -->
-                <div class="card">
-                    <img src="imagens/Pietro gimenez.jpg" class="d-block w-100 , card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Pietro Gimenez</h5>
-                        <p class="card-text">Olá sou Pietro Gimenez e gosto de jogar, meu nivel em inglês é
-                            intermediario/avançado e estou cada vez mais tentando ser alguem melhor.</p>
-                    </div>
-                </div>
-                <!-- card Zago -->
-                <div class="card">
-                    <img src="imagens/zago2.jpg" class="d-block w-100 , card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Pedro Zago</h5>
-                        <p class="card-text">Aluno do ensino médio, Fatec, 15 anos de idade, nível avançado em inglês e
-                            intermediário em espanhol
-                        </p>
-                    </div>
-                </div>
-                <!-- Pedro Rodrigues -->
-                <div class="card">
-                    <img src="imagens/Rodruigues 2.jpg" class="d-block w-100 , card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Pedro Rodrigues</h5>
-                        <p class="card-text">Aluno do ensino médio, Fatec, 15 anos de idade, nível intermediario em
-                            inglês e gosto de ler e jogar</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+    <main>
+        <br><br><br>
+        <!-- div do jogo -->
+    <div class="game">
+        <!-- img do hamburguer -->
+        <img src="imagens/images-removebg-preview.png" alt="" id="character">
+        <!-- img da boca -->
+        <img src="imagens/boca-removebg-preview.png" alt="" id="block">
+    </div>
+    <!-- paragrafo para pontuação -->
+    <p>Pontuação: <span id="scoreSpan"></span></p>
+    <br><br><br>
     </main>
+    <!-- link java script -->
+    <script src="script.js"></script>
     <footer>
         <!-- links footer -->
         <h3 class="central">Links Uteis</h3>
@@ -158,5 +106,4 @@
         <br>
     </footer>
 </body>
-
 </html>
