--- a/nhoque.html
+++ b/nhoque.html
@@ -56,8 +56,8 @@
     <main>
         <!-- section conteudo receita pra mobile -->
         <section id="conteudo-moba">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Nhoque</h1>
+            <img src="imagens/Nhoque.jpg" alt="" class="img_rec">
             <!-- accordion contendo o passo a passo e ingredientes -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -69,38 +69,26 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- ingredientes para massa -->
-                            <h5>Massa:</h5>
+                            <!-- ingredientes nhoque -->
+                            <h5>6 porções</h5>
                             <ul>
-                                <li>4 tabletes de fermento biológico fresco (60 g)
+                                <li>6 batatas médias
                                 </li>
-                                <li>1 colher (sopa) de açúcar
+                                <li>1 xícara de farinha de trigo
                                 </li>
-                                <li>2 xícaras (chá) de leite (400 ml)
+                                <li>sal a gosto
                                 </li>
-                                <li>1 xícara (chá) de óleo
+                                <li>1 lata de molho de tomate
                                 </li>
-                                <li>Sal a vontade
+                                <li>1/2 cebola
                                 </li>
-                                <li>aproximadamente 1 kg de farinha de trigo
+                                <li>1 colher (sopa) de azeite
                                 </li>
-                            </ul>
-                            <!-- ingredinetes para recheio -->
-                            <h5>Recheio:</h5>
-                            <ul>
-                                <li>500 g de carne moída (patinho ou fraldinha)
+                                <li>2 tabletes de caldo de carne
                                 </li>
-                                <li>1 cebola grande bem picada
+                                <li>1/2 kg de carne moída
                                 </li>
-                                <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                </li>
-                                <li>1 colher (sopa) de hortelã picada
-                                </li>
-                                <li>1 tomate grande sem sementes picado
-                                </li>
-                                <li>2 colheres (sopa) de suco de limão
-                                </li>
-                                <li>Sal e pimenta-do-reino a gosto
+                                <li>1 pacote de queijo ralado
                                 </li>
                             </ul>
                         </div>
@@ -115,30 +103,42 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
+                            <h5>Modo de Preparo</h5>
                             <!-- modo de preparo -->
-                            <h5>Modo de preparo</h5>
                             <ol>
-                                <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                <li>Cozinhe as batatas, em água, até que estejam macias.
                                 </li>
-                                <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                <li>Descasque-as e passe pelo espremedor ainda quentes.
                                 </li>
-                                <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                    farinha, até desgrudar das mãos.
+                                <li>Vá acrescentando a farinha e o sal aos poucos, amasse bem.
                                 </li>
-                                <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                <li>Coloque a massa sobre uma mesa enfarinhada e faça rolinhos.
                                 </li>
-                                <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                <li>Corte cada rolinho em pedaços de mais ou menos 2 cm.
                                 </li>
-                                <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes e
-                                    deixe escorrer sobre uma peneira antes de utilizar.
+                                <li>Leve ao fogo, em uma panela com bastante água temperada com sal.
                                 </li>
-                                <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                <li>Quando a água levantar fervura, vá colocando os nhoques, até eles começarem a subir.
                                 </li>
-                                <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                    esfiha fechada).
+                                <li>Coloque água fria em uma bacia com um escorredor dentro, retire os nhoques já
+                                    cozidos e coloque-os no escorredor para dar choque térmico.
                                 </li>
-                                <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos ou até dourarem.
+                                <li>Repita o processo até toda massa estar cozida.
                                 </li>
+                                <li>Escorra bem e coloque o nhoque em um refratário, reserve.
+                                </li>
+                                <li>Agora para o molho pique a cebola, bem miudinha e, em uma panela, frite com azeite.
+
+                                </li>
+                                <li>Acrescente a carne e os tabletes de caldo de carne.
+                                </li>
+                                <li>Mexa bem, quando a carne já estiver cozida, acrescente o molho e deixe cozinhar por
+                                    mais 4 min
+                                </li>
+                                <li>Despeje-o sobre o nhoque, salpique queijo em cima e leve ao forno para gratinar,
+                                    sirva quente e bom apetite!
+                                </li>
+
                             </ol>
                         </div>
                     </div>
@@ -147,8 +147,8 @@
         </section>
         <!-- section conteudo receita pra +600px -->
         <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Nhoque</h1>
+            <img src="imagens/Nhoque.jpg" alt="" class="img_rec">
             <!-- article pra aplicar wrap -->
             <article class="flex_wrap">
                 <!-- accordion com ingredientes e Passo a passo -->
@@ -162,38 +162,26 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <!-- ingredientes pra massa -->
-                                <h5>Massa:</h5>
+                                <!-- ingredientes inhoque -->
+                                <h5>6 porções</h5>
                                 <ul>
-                                    <li>4 tabletes de fermento biológico fresco (60 g)
+                                    <li>6 batatas médias
                                     </li>
-                                    <li>1 colher (sopa) de açúcar
+                                    <li>1 xícara de farinha de trigo
                                     </li>
-                                    <li>2 xícaras (chá) de leite (400 ml)
+                                    <li>sal a gosto
                                     </li>
-                                    <li>1 xícara (chá) de óleo
+                                    <li>1 lata de molho de tomate
                                     </li>
-                                    <li>Sal a vontade
+                                    <li>1/2 cebola
                                     </li>
-                                    <li>aproximadamente 1 kg de farinha de trigo
+                                    <li>1 colher (sopa) de azeite
                                     </li>
-                                </ul>
-                                <!-- ingredientes pro recheio -->
-                                <h5>Recheio:</h5>
-                                <ul>
-                                    <li>500 g de carne moída (patinho ou fraldinha)
+                                    <li>2 tabletes de caldo de carne
                                     </li>
-                                    <li>1 cebola grande bem picada
+                                    <li>1/2 kg de carne moída
                                     </li>
-                                    <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                    </li>
-                                    <li>1 colher (sopa) de hortelã picada
-                                    </li>
-                                    <li>1 tomate grande sem sementes picado
-                                    </li>
-                                    <li>2 colheres (sopa) de suco de limão
-                                    </li>
-                                    <li>Sal e pimenta-do-reino a gosto
+                                    <li>1 pacote de queijo ralado
                                     </li>
                                 </ul>
                             </div>
@@ -211,30 +199,44 @@
                         </h3>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
+                                <!-- modo de preparo -->
                                 <h5>Modo de preparo</h5>
                                 <ol>
-                                    <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                    <li>Cozinhe as batatas, em água, até que estejam macias.
                                     </li>
-                                    <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                    <li>Descasque-as e passe pelo espremedor ainda quentes.
                                     </li>
-                                    <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                        farinha, até desgrudar das mãos.
+                                    <li>Vá acrescentando a farinha e o sal aos poucos, amasse bem.
                                     </li>
-                                    <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                    <li>Coloque a massa sobre uma mesa enfarinhada e faça rolinhos.
                                     </li>
-                                    <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                    <li>Corte cada rolinho em pedaços de mais ou menos 2 cm.
                                     </li>
-                                    <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes
-                                        e deixe escorrer sobre uma peneira antes de utilizar.
+                                    <li>Leve ao fogo, em uma panela com bastante água temperada com sal.
                                     </li>
-                                    <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                    <li>Quando a água levantar fervura, vá colocando os nhoques, até eles começarem a
+                                        subir.
                                     </li>
-                                    <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                        esfiha fechada).
+                                    <li>Coloque água fria em uma bacia com um escorredor dentro, retire os nhoques já
+                                        cozidos e coloque-os no escorredor para dar choque térmico.
                                     </li>
-                                    <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos
-                                        ou até dourarem.
+                                    <li>Repita o processo até toda massa estar cozida.
                                     </li>
+                                    <li>Escorra bem e coloque o nhoque em um refratário, reserve.
+                                    </li>
+                                    <li>Agora para o molho pique a cebola, bem miudinha e, em uma panela, frite com
+                                        azeite.
+
+                                    </li>
+                                    <li>Acrescente a carne e os tabletes de caldo de carne.
+                                    </li>
+                                    <li>Mexa bem, quando a carne já estiver cozida, acrescente o molho e deixe cozinhar
+                                        por mais 4 min
+                                    </li>
+                                    <li>Despeje-o sobre o nhoque, salpique queijo em cima e leve ao forno para gratinar,
+                                        sirva quente e bom apetite!
+                                    </li>
+
                                 </ol>
                             </div>
                         </div>
