--- a/tarte.html
+++ b/tarte.html
@@ -56,8 +56,8 @@
     <main>
         <!-- section conteudo receita pra mobile -->
         <section id="conteudo-moba">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Tarte Tartin</h1>
+            <img src="imagens/Tarte Tartin.jpg" alt="" class="img_rec">
             <!-- accordion contendo o passo a passo e ingredientes -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -69,38 +69,22 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- ingredientes para massa -->
-                            <h5>Massa:</h5>
+                            <!-- ingredientes para tartin tartin -->
+                            <h5>Tarte Tartin</h5>
                             <ul>
-                                <li>4 tabletes de fermento biológico fresco (60 g)
+                                <li>3 minimaçãs
                                 </li>
-                                <li>1 colher (sopa) de açúcar
+                                <li>170 gramas de massa folhada
                                 </li>
-                                <li>2 xícaras (chá) de leite (400 ml)
+                                <li>1 colher de sopa de açúcar demerara
                                 </li>
-                                <li>1 xícara (chá) de óleo
+                                <li>2 colheres de chá de manteiga
                                 </li>
-                                <li>Sal a vontade
+                                <li>Açúcar demerara para polvilhar
                                 </li>
-                                <li>aproximadamente 1 kg de farinha de trigo
+                                <li>Canela em pó para servir
                                 </li>
-                            </ul>
-                            <!-- ingredinetes para recheio -->
-                            <h5>Recheio:</h5>
-                            <ul>
-                                <li>500 g de carne moída (patinho ou fraldinha)
-                                </li>
-                                <li>1 cebola grande bem picada
-                                </li>
-                                <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                </li>
-                                <li>1 colher (sopa) de hortelã picada
-                                </li>
-                                <li>1 tomate grande sem sementes picado
-                                </li>
-                                <li>2 colheres (sopa) de suco de limão
-                                </li>
-                                <li>Sal e pimenta-do-reino a gosto
+                                <li>Creme batido para servir
                                 </li>
                             </ul>
                         </div>
@@ -118,26 +102,34 @@
                             <!-- modo de preparo -->
                             <h5>Modo de preparo</h5>
                             <ol>
-                                <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                <li>Preaqueça o forno a 180 graus Célsius (temperatura média).
                                 </li>
-                                <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                <li>Corte a massa folhada em 6 retângulos de cerca de 8 centímetros e meio por 10
+                                    centímetros e 30 milímetros de espessura.
                                 </li>
-                                <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                    farinha, até desgrudar das mãos.
+                                <li>Lave, seque e corte as maçãs ao meio no sentido do comprimento. Descarte as sementes
+                                    e corte as metades em meias-luas de meio centímetro. Coloque a manteiga numa tigela
+                                    e leve ao micro-ondas por 20 segundos para derreter.
                                 </li>
-                                <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                <li>Unte com manteiga derretida uma assadeira grande, de preferência antiaderente.
+                                    Polvilhe 1 colher de sopa de açúcar na assadeira formando 6 áreas retangulares de
+                                    cerca de 6 centímetros por 8 centímetros.
                                 </li>
-                                <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                <li>Deixe espaço entre cada uma delas — não precisa ser um retângulo perfeito, é só para
+                                    marcar o lugar onde a maçã e a massa de cada tortinha vão caramelizar.
                                 </li>
-                                <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes e
-                                    deixe escorrer sobre uma peneira antes de utilizar.
+                                <li>Coloque 6 fatias de maçã sobrepostas formando uma escama em cada área de açúcar.
+                                    Cubra as fatias com um retângulo de massa folhada, pressionando delicadamente as
+                                    bordas na assadeira.
                                 </li>
-                                <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                <li>Pincele manteiga derretida sobre as tortinhas e polvilhe um pouco de açúcar demerara
+                                    sobre a massa — assim elas ficam mais douradas e crocantes.
                                 </li>
-                                <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                    esfiha fechada).
+                                <li>Leve ao forno para assar por cerca de 25 minutos, até inflar e dourar.
                                 </li>
-                                <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos ou até dourarem.
+                                <li>Retire do forno e, com uma espátula de silicone, descole as tortinhas ainda quentes
+                                    da assadeira. Transfira para um prato e sirva a seguir com creme batido e
+                                    polvilhada com canela.
                                 </li>
                             </ol>
                         </div>
@@ -147,8 +139,8 @@
         </section>
         <!-- section conteudo receita pra +600px -->
         <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Tarte Tartin</h1>
+            <img src="imagens/Tarte Tartin.jpg" alt="" class="img_rec">
             <!-- article pra aplicar wrap -->
             <article class="flex_wrap">
                 <!-- accordion com ingredientes e Passo a passo -->
@@ -162,38 +154,22 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <!-- ingredientes pra massa -->
-                                <h5>Massa:</h5>
+                                <!-- ingredientes para tartin tartin -->
+                                <h5>Tarte Tartin</h5>
                                 <ul>
-                                    <li>4 tabletes de fermento biológico fresco (60 g)
+                                    <li>3 minimaçãs
                                     </li>
-                                    <li>1 colher (sopa) de açúcar
+                                    <li>170 gramas de massa folhada
                                     </li>
-                                    <li>2 xícaras (chá) de leite (400 ml)
+                                    <li>1 colher de sopa de açúcar demerara
                                     </li>
-                                    <li>1 xícara (chá) de óleo
+                                    <li>2 colheres de chá de manteiga
                                     </li>
-                                    <li>Sal a vontade
+                                    <li>Açúcar demerara para polvilhar
                                     </li>
-                                    <li>aproximadamente 1 kg de farinha de trigo
+                                    <li>Canela em pó para servir
                                     </li>
-                                </ul>
-                                <!-- ingredientes pro recheio -->
-                                <h5>Recheio:</h5>
-                                <ul>
-                                    <li>500 g de carne moída (patinho ou fraldinha)
-                                    </li>
-                                    <li>1 cebola grande bem picada
-                                    </li>
-                                    <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                    </li>
-                                    <li>1 colher (sopa) de hortelã picada
-                                    </li>
-                                    <li>1 tomate grande sem sementes picado
-                                    </li>
-                                    <li>2 colheres (sopa) de suco de limão
-                                    </li>
-                                    <li>Sal e pimenta-do-reino a gosto
+                                    <li>Creme batido para servir
                                     </li>
                                 </ul>
                             </div>
@@ -211,29 +187,36 @@
                         </h3>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <h5>Modo de preparo</h5>
+                                <!-- modo de preparo tarte tartin -->
                                 <ol>
-                                    <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                    <li>Preaqueça o forno a 180 graus Célsius (temperatura média).
                                     </li>
-                                    <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                    <li>Corte a massa folhada em 6 retângulos de cerca de 8 centímetros e meio por 10
+                                        centímetros e 30 milímetros de espessura.
                                     </li>
-                                    <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                        farinha, até desgrudar das mãos.
+                                    <li>Lave, seque e corte as maçãs ao meio no sentido do comprimento. Descarte as
+                                        sementes e corte as metades em meias-luas de meio centímetro. Coloque a manteiga
+                                        numa tigela e leve ao micro-ondas por 20 segundos para derreter.
                                     </li>
-                                    <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                    <li>Unte com manteiga derretida uma assadeira grande, de preferência antiaderente.
+                                        Polvilhe 1 colher de sopa de açúcar na assadeira formando 6 áreas retangulares
+                                        de cerca de 6 centímetros por 8 centímetros.
                                     </li>
-                                    <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                    <li>Deixe espaço entre cada uma delas — não precisa ser um retângulo perfeito, é só
+                                        para marcar o lugar onde a maçã e a massa de cada tortinha vão caramelizar.
                                     </li>
-                                    <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes
-                                        e deixe escorrer sobre uma peneira antes de utilizar.
+                                    <li>Coloque 6 fatias de maçã sobrepostas formando uma escama em cada área de açúcar.
+                                        Cubra as fatias com um retângulo de massa folhada, pressionando delicadamente as
+                                        bordas na assadeira.
                                     </li>
-                                    <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                    <li>Pincele manteiga derretida sobre as tortinhas e polvilhe um pouco de açúcar
+                                        demerara sobre a massa — assim elas ficam mais douradas e crocantes.
                                     </li>
-                                    <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                        esfiha fechada).
+                                    <li>Leve ao forno para assar por cerca de 25 minutos, até inflar e dourar.
                                     </li>
-                                    <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos
-                                        ou até dourarem.
+                                    <li>Retire do forno e, com uma espátula de silicone, descole as tortinhas ainda
+                                        quentes da assadeira. Transfira para um prato e sirva a seguir com creme batido
+                                        e polvilhada com canela.
                                     </li>
                                 </ol>
                             </div>
