--- a/vegburguer.html
+++ b/vegburguer.html
@@ -56,8 +56,8 @@
     <main>
         <!-- section conteudo receita pra mobile -->
         <section id="conteudo-moba">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer hamburguer vegano</h1>
+            <img src="imagens/Hamburguer vegano.jpg" alt="" class="img_rec">
             <!-- accordion contendo o passo a passo e ingredientes -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -69,38 +69,20 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- ingredientes para massa -->
-                            <h5>Massa:</h5>
+                            <!-- ingredientes para hamburguer vegano -->
+                            <h5>1 hamburguer</h5>
                             <ul>
-                                <li>4 tabletes de fermento biológico fresco (60 g)
+                                <li>1 batata média
                                 </li>
-                                <li>1 colher (sopa) de açúcar
+                                <li>Cebola
                                 </li>
-                                <li>2 xícaras (chá) de leite (400 ml)
+                                <li>Alho
                                 </li>
-                                <li>1 xícara (chá) de óleo
+                                <li>Panko
                                 </li>
-                                <li>Sal a vontade
+                                <li>Manteiga ou óleo de côco
                                 </li>
-                                <li>aproximadamente 1 kg de farinha de trigo
-                                </li>
-                            </ul>
-                            <!-- ingredinetes para recheio -->
-                            <h5>Recheio:</h5>
-                            <ul>
-                                <li>500 g de carne moída (patinho ou fraldinha)
-                                </li>
-                                <li>1 cebola grande bem picada
-                                </li>
-                                <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                </li>
-                                <li>1 colher (sopa) de hortelã picada
-                                </li>
-                                <li>1 tomate grande sem sementes picado
-                                </li>
-                                <li>2 colheres (sopa) de suco de limão
-                                </li>
-                                <li>Sal e pimenta-do-reino a gosto
+                                <li>1 pacote de pão de hamburguer
                                 </li>
                             </ul>
                         </div>
@@ -118,26 +100,22 @@
                             <!-- modo de preparo -->
                             <h5>Modo de preparo</h5>
                             <ol>
-                                <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                <li>Cozinhe a batata no microondas por 5/10 minutos
                                 </li>
-                                <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                <li>Amasse como se fosse fazer um purê
                                 </li>
-                                <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                    farinha, até desgrudar das mãos.
+                                <li>Doure meia cebola picadinha e um dente de alho na manteiga ou óleo de côco
                                 </li>
-                                <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                <li>Junte a cebola e o alho com a batata
                                 </li>
-                                <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                <li>Faça essa mistura em formato de um hambúrguer como na foto
                                 </li>
-                                <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes e
-                                    deixe escorrer sobre uma peneira antes de utilizar.
+                                <li>Coloque o panko em um prato médio e empane o seu hambúrguer
                                 </li>
-                                <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                <li>Em uma frigideira acrescente a manteiga ou o oleo de côco e doure seu hambúrguer na
+                                    temperatura máxima
                                 </li>
-                                <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                    esfiha fechada).
-                                </li>
-                                <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos ou até dourarem.
+                                <li>Corte o pão no meio e coloque dentro o hamburguer
                                 </li>
                             </ol>
                         </div>
@@ -147,8 +125,8 @@
         </section>
         <!-- section conteudo receita pra +600px -->
         <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Hamburguer Vegano</h1>
+            <img src="imagens/Hamburguer vegano.jpg" alt="" class="img_rec">
             <!-- article pra aplicar wrap -->
             <article class="flex_wrap">
                 <!-- accordion com ingredientes e Passo a passo -->
@@ -162,38 +140,19 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <!-- ingredientes pra massa -->
-                                <h5>Massa:</h5>
+                                <h5>1 hamburguer</h5>
                                 <ul>
-                                    <li>4 tabletes de fermento biológico fresco (60 g)
+                                    <li>1 batata média
                                     </li>
-                                    <li>1 colher (sopa) de açúcar
+                                    <li>Cebola
                                     </li>
-                                    <li>2 xícaras (chá) de leite (400 ml)
+                                    <li>Alho
                                     </li>
-                                    <li>1 xícara (chá) de óleo
+                                    <li>Panko
                                     </li>
-                                    <li>Sal a vontade
+                                    <li>Manteiga ou óleo de côco
                                     </li>
-                                    <li>aproximadamente 1 kg de farinha de trigo
-                                    </li>
-                                </ul>
-                                <!-- ingredientes pro recheio -->
-                                <h5>Recheio:</h5>
-                                <ul>
-                                    <li>500 g de carne moída (patinho ou fraldinha)
-                                    </li>
-                                    <li>1 cebola grande bem picada
-                                    </li>
-                                    <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                    </li>
-                                    <li>1 colher (sopa) de hortelã picada
-                                    </li>
-                                    <li>1 tomate grande sem sementes picado
-                                    </li>
-                                    <li>2 colheres (sopa) de suco de limão
-                                    </li>
-                                    <li>Sal e pimenta-do-reino a gosto
+                                    <li>1 pacote de pão de hamburguer
                                     </li>
                                 </ul>
                             </div>
@@ -211,29 +170,25 @@
                         </h3>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
+                                <!-- modo de preparo -->
                                 <h5>Modo de preparo</h5>
                                 <ol>
-                                    <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                    <li>Cozinhe a batata no microondas por 5/10 minutos
                                     </li>
-                                    <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                    <li>Amasse como se fosse fazer um purê
                                     </li>
-                                    <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                        farinha, até desgrudar das mãos.
+                                    <li>Doure meia cebola picadinha e um dente de alho na manteiga ou óleo de côco
                                     </li>
-                                    <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                    <li>Junte a cebola e o alho com a batata
                                     </li>
-                                    <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                    <li>Faça essa mistura em formato de um hambúrguer como na foto
                                     </li>
-                                    <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes
-                                        e deixe escorrer sobre uma peneira antes de utilizar.
+                                    <li>Coloque o panko em um prato médio e empane o seu hambúrguer
                                     </li>
-                                    <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
+                                    <li>Em uma frigideira acrescente a manteiga ou o oleo de côco e doure seu hambúrguer
+                                        na temperatura máxima
                                     </li>
-                                    <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                        esfiha fechada).
-                                    </li>
-                                    <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos
-                                        ou até dourarem.
+                                    <li>Corte o pão no meio e coloque dentro o hamburguer
                                     </li>
                                 </ol>
                             </div>
