--- a/Brownie.html
+++ b/Brownie.html
@@ -1,3 +1,4 @@
+o
 <!DOCTYPE html>
 <html lang="en">
 
@@ -56,9 +57,9 @@
     <main>
         <!-- section conteudo receita pra mobile -->
         <section id="conteudo-moba">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
-            <!-- accordion contendo o passo a passo e ingredientes -->
+            <h1 class="central">Como Fazer Brownie:</h1>
+            <img src="imagens/brownie.jpg" alt="" class="img_rec">
+            <!-- accordion contendo ingredientes e passo a passo -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
@@ -69,38 +70,18 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- ingredientes para massa -->
-                            <h5>Massa:</h5>
+                            <!-- ingredientes brownie -->
+                            <h5>Brownie:</h5>
                             <ul>
-                                <li>4 tabletes de fermento biológico fresco (60 g)
+                                <li>2 xícaras de achocolatado em pó
                                 </li>
-                                <li>1 colher (sopa) de açúcar
+                                <li>1 xícara de farinha de trigo
                                 </li>
-                                <li>2 xícaras (chá) de leite (400 ml)
+                                <li>1 xícara de açúcar
                                 </li>
-                                <li>1 xícara (chá) de óleo
+                                <li>200g de manteiga
                                 </li>
-                                <li>Sal a vontade
-                                </li>
-                                <li>aproximadamente 1 kg de farinha de trigo
-                                </li>
-                            </ul>
-                            <!-- ingredinetes para recheio -->
-                            <h5>Recheio:</h5>
-                            <ul>
-                                <li>500 g de carne moída (patinho ou fraldinha)
-                                </li>
-                                <li>1 cebola grande bem picada
-                                </li>
-                                <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                </li>
-                                <li>1 colher (sopa) de hortelã picada
-                                </li>
-                                <li>1 tomate grande sem sementes picado
-                                </li>
-                                <li>2 colheres (sopa) de suco de limão
-                                </li>
-                                <li>Sal e pimenta-do-reino a gosto
+                                <li>4 ovos
                                 </li>
                             </ul>
                         </div>
@@ -115,29 +96,20 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- modo de preparo -->
                             <h5>Modo de preparo</h5>
+                            <!-- modo de preparo -->
                             <ol>
-                                <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                <li>Em uma tigela coloque os ovos e o açúcar e bata com a ajuda de fouet ou garfo;
                                 </li>
-                                <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                <li>Em seguida adicione a manteiga e o achocolatado em pó;
                                 </li>
-                                <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                    farinha, até desgrudar das mãos.
+                                <li>Misture tudo e depois adicione a farinha de trigo;
                                 </li>
-                                <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                <li>Mexa a massa até que fique homogênea;
                                 </li>
-                                <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                <li>Despeje a massa em uma forma untada com achocolatado em pó;
                                 </li>
-                                <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes e
-                                    deixe escorrer sobre uma peneira antes de utilizar.
-                                </li>
-                                <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
-                                </li>
-                                <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                    esfiha fechada).
-                                </li>
-                                <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos ou até dourarem.
+                                <li>Leve para assar em forno pré-aquecido a 180ºC por 35 minutos.
                                 </li>
                             </ol>
                         </div>
@@ -145,55 +117,34 @@
                 </div>
             </div>
         </section>
-        <!-- section conteudo receita pra +600px -->
+        <!-- section conteudo receitas tablet e Desktop -->
         <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
-            <!-- article pra aplicar wrap -->
+            <h1 class="central">Como Fazer Brownie:</h1>
+            <img src="imagens/brownie.jpg" alt="" class="img_rec">
+            <!-- article pra colocar flex wrap -->
             <article class="flex_wrap">
-                <!-- accordion com ingredientes e Passo a passo -->
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-controls="collapseOne">
+                                <!-- ingredientes brownie -->
                                 <h3>Ingredientes:</h3>
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <!-- ingredientes pra massa -->
                                 <h5>Massa:</h5>
                                 <ul>
-                                    <li>4 tabletes de fermento biológico fresco (60 g)
+                                    <li>2 xícaras de achocolatado em pó
                                     </li>
-                                    <li>1 colher (sopa) de açúcar
+                                    <li>1 xícara de farinha de trigo
                                     </li>
-                                    <li>2 xícaras (chá) de leite (400 ml)
+                                    <li>1 xícara de açúcar
                                     </li>
-                                    <li>1 xícara (chá) de óleo
+                                    <li>200g de manteiga
                                     </li>
-                                    <li>Sal a vontade
-                                    </li>
-                                    <li>aproximadamente 1 kg de farinha de trigo
-                                    </li>
-                                </ul>
-                                <!-- ingredientes pro recheio -->
-                                <h5>Recheio:</h5>
-                                <ul>
-                                    <li>500 g de carne moída (patinho ou fraldinha)
-                                    </li>
-                                    <li>1 cebola grande bem picada
-                                    </li>
-                                    <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                    </li>
-                                    <li>1 colher (sopa) de hortelã picada
-                                    </li>
-                                    <li>1 tomate grande sem sementes picado
-                                    </li>
-                                    <li>2 colheres (sopa) de suco de limão
-                                    </li>
-                                    <li>Sal e pimenta-do-reino a gosto
+                                    <li>4 ovos
                                     </li>
                                 </ul>
                             </div>
@@ -205,35 +156,25 @@
                         <h3 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseTwo" aria-controls="collapseTwo">
-                                <!-- passo a passo receita -->
                                 <h3>Modo de Preparo</h3>
+                                <!-- modo de preparo broniwe -->
                             </button>
                         </h3>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <h5>Modo de preparo</h5>
                                 <ol>
-                                    <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                    <li>Em uma tigela coloque os ovos e o açúcar e bata com a ajuda de fouet ou garfo;
                                     </li>
-                                    <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                    <li>Em seguida adicione a manteiga e o achocolatado em pó;
                                     </li>
-                                    <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                        farinha, até desgrudar das mãos.
+                                    <li>Misture tudo e depois adicione a farinha de trigo;
                                     </li>
-                                    <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
+                                    <li>Mexa a massa até que fique homogênea;
                                     </li>
-                                    <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
+                                    <li>Despeje a massa em uma forma untada com achocolatado em pó;
                                     </li>
-                                    <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes
-                                        e deixe escorrer sobre uma peneira antes de utilizar.
-                                    </li>
-                                    <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
-                                    </li>
-                                    <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                        esfiha fechada).
-                                    </li>
-                                    <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos
-                                        ou até dourarem.
+                                    <li>Leve para assar em forno pré-aquecido a 180ºC por 35 minutos.
                                     </li>
                                 </ol>
                             </div>
