--- a/bolinhobaca.html
+++ b/bolinhobaca.html
@@ -56,8 +56,8 @@
     <main>
         <!-- section conteudo receita pra mobile -->
         <section id="conteudo-moba">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Bolinho de bacalhau</h1>
+            <img src="imagens/Bolinho de bacalhau.jpg" alt="" class="img_rec">
             <!-- accordion contendo o passo a passo e ingredientes -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -69,38 +69,24 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <!-- ingredientes para massa -->
-                            <h5>Massa:</h5>
+                            <!-- ingredientes para bolinho de bacalhau -->
+                            <h5>40 unidades</h5>
                             <ul>
-                                <li>4 tabletes de fermento biológico fresco (60 g)
+                                <li>300 g de bacalhau dessalgado e desfiado
                                 </li>
-                                <li>1 colher (sopa) de açúcar
+                                <li>3 xícara (chá) de batatas cozidas e espremidas
                                 </li>
-                                <li>2 xícaras (chá) de leite (400 ml)
+                                <li>1 colher (sopa) de farinha de trigo
                                 </li>
-                                <li>1 xícara (chá) de óleo
+                                <li>sal a gosto
                                 </li>
-                                <li>Sal a vontade
+                                <li>pimenta-do-reino a gosto
                                 </li>
-                                <li>aproximadamente 1 kg de farinha de trigo
+                                <li>3 ovos
                                 </li>
-                            </ul>
-                            <!-- ingredinetes para recheio -->
-                            <h5>Recheio:</h5>
-                            <ul>
-                                <li>500 g de carne moída (patinho ou fraldinha)
+                                <li>2 colheres (sopa) de cheiro-verde picado
                                 </li>
-                                <li>1 cebola grande bem picada
-                                </li>
-                                <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                </li>
-                                <li>1 colher (sopa) de hortelã picada
-                                </li>
-                                <li>1 tomate grande sem sementes picado
-                                </li>
-                                <li>2 colheres (sopa) de suco de limão
-                                </li>
-                                <li>Sal e pimenta-do-reino a gosto
+                                <li>óleo para fritar
                                 </li>
                             </ul>
                         </div>
@@ -118,26 +104,13 @@
                             <!-- modo de preparo -->
                             <h5>Modo de preparo</h5>
                             <ol>
-                                <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                <li>Em uma tigela, misture bem todos os ingredientes.
                                 </li>
-                                <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                <li>Com uma colher de sopa, pegue porções de massa e faça bolinhas
                                 </li>
-                                <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                    farinha, até desgrudar das mãos.
+                                <li>Frite em óleo quente até dourar.
                                 </li>
-                                <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
-                                </li>
-                                <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
-                                </li>
-                                <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes e
-                                    deixe escorrer sobre uma peneira antes de utilizar.
-                                </li>
-                                <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
-                                </li>
-                                <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                    esfiha fechada).
-                                </li>
-                                <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos ou até dourarem.
+                                <li>Escorra em papel absorvente.
                                 </li>
                             </ol>
                         </div>
@@ -147,8 +120,8 @@
         </section>
         <!-- section conteudo receita pra +600px -->
         <section id="conteudo-tablet" class="quem">
-            <h1 class="central">Como Fazer esfiha de carne:</h1>
-            <img src="imagens/Esfiha de carne.jpg" alt="" class="img_rec">
+            <h1 class="central">Como Fazer Bolinho de Bacalhau</h1>
+            <img src="imagens/Bolinho de bacalhau.jpg" alt="" class="img_rec">
             <!-- article pra aplicar wrap -->
             <article class="flex_wrap">
                 <!-- accordion com ingredientes e Passo a passo -->
@@ -162,38 +135,24 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <!-- ingredientes pra massa -->
-                                <h5>Massa:</h5>
+                                <!-- ingredientes para bolinho de bacalhau -->
+                                <h5>40 unidades</h5>
                                 <ul>
-                                    <li>4 tabletes de fermento biológico fresco (60 g)
+                                    <li>300 g de bacalhau dessalgado e desfiado
                                     </li>
-                                    <li>1 colher (sopa) de açúcar
+                                    <li>3 xícara (chá) de batatas cozidas e espremidas
                                     </li>
-                                    <li>2 xícaras (chá) de leite (400 ml)
+                                    <li>1 colher (sopa) de farinha de trigo
                                     </li>
-                                    <li>1 xícara (chá) de óleo
+                                    <li>sal a gosto
                                     </li>
-                                    <li>Sal a vontade
+                                    <li>pimenta-do-reino a gosto
                                     </li>
-                                    <li>aproximadamente 1 kg de farinha de trigo
+                                    <li>3 ovos
                                     </li>
-                                </ul>
-                                <!-- ingredientes pro recheio -->
-                                <h5>Recheio:</h5>
-                                <ul>
-                                    <li>500 g de carne moída (patinho ou fraldinha)
+                                    <li>2 colheres (sopa) de cheiro-verde picado
                                     </li>
-                                    <li>1 cebola grande bem picada
-                                    </li>
-                                    <li>1 xícara (chá) de salsa e cebolinha verde picadas
-                                    </li>
-                                    <li>1 colher (sopa) de hortelã picada
-                                    </li>
-                                    <li>1 tomate grande sem sementes picado
-                                    </li>
-                                    <li>2 colheres (sopa) de suco de limão
-                                    </li>
-                                    <li>Sal e pimenta-do-reino a gosto
+                                    <li>óleo para fritar
                                     </li>
                                 </ul>
                             </div>
@@ -211,29 +170,16 @@
                         </h3>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
+                                <!-- modo de preparo -->
                                 <h5>Modo de preparo</h5>
                                 <ol>
-                                    <li>Dilua o fermento no açúcar e junte o leite, o óleo e sal a gosto.
+                                    <li>Em uma tigela, misture bem todos os ingredientes.
                                     </li>
-                                    <li>Vá adicionando a farinha aos poucos, enquanto mistura, até conseguir manipular.
+                                    <li>Com uma colher de sopa, pegue porções de massa e faça bolinhas
                                     </li>
-                                    <li>Transfira para uma superfície lisa enfarinhada e sove a massa, adicionando mais
-                                        farinha, até desgrudar das mãos.
+                                    <li>Frite em óleo quente até dourar.
                                     </li>
-                                    <li>Cubra e deixe fermentar até dobrar o volume (uns 40 minutos).
-                                    </li>
-                                    <li>Faça bolinhas com pequenas porções da massa e abra com o rolo até obter discos.
-                                    </li>
-                                    <li>Para preparar os ingredientes é necessario que você misture bem os ingredientes
-                                        e deixe escorrer sobre uma peneira antes de utilizar.
-                                    </li>
-                                    <li>Recheie o centro de cada disco e una as pontas, formando um triângulo.
-                                    </li>
-                                    <li>Disponha em assadeira polvilhada com farinha (com as dobras para baixo se quiser
-                                        esfiha fechada).
-                                    </li>
-                                    <li>Asse em forno médio preaquecido (200 ºC) por cerca de 40 minutos
-                                        ou até dourarem.
+                                    <li>Escorra em papel absorvente.
                                     </li>
                                 </ol>
                             </div>
