--- a/contato.html
+++ b/contato.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-        <meta name="description" content="receitas">
-        <meta name="keywords" content="receitas">
-        <meta name="author" content="Pietro Gimenez, Pedro Rodrigues, Pedro Zago">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Receitas pelo mundo</title>
-        <link rel="shortcut icon" href="imagens/RECEITAS PELO MUNDO.png" type="image/x-icon"> <!-- Logo da página -->
-        <link rel="stylesheet" href="estilo.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta name="description" content="receitas">
+    <meta name="keywords" content="receitas">
+    <meta name="author" content="Pietro Gimenez, Pedro Rodrigues, Pedro Zago">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Receitas pelo mundo</title>
+    <link rel="shortcut icon" href="imagens/RECEITAS PELO MUNDO.png" type="image/x-icon"> <!-- Logo da página -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="estilo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
     <header>
+        <!-- header responsivo -->
         <nav class="navbar navbar-dark navbar-fixed-top navbar-expand-md">
             <div class="container-fluid">
                 <a class="navbar-brand me-auto" href="#">Receitas pelo mundo</a>
@@ -33,13 +39,16 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 nav-underline">
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2"  href="index.html">Home</a>
+                                <a class="nav-link mx-lg-2" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="sobre.html">Quem somos: </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active mx-lg-2" aria-current="page" href="contato.html">Contate-nos </a>
+                                <a class="nav-link mx-lg-2 active" aria-current="page" href="contato.html">Contate-nos </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link mx-lg-2" href="jogo.html">jogo js</a>
                             </li>
                     </div>
                 </div>
@@ -47,25 +56,90 @@
             </div>
         </nav>
     </header>
-            <main id="cont">
-                <div id="borda_forms">
-                    <div class="caixa">
-                        <div id="entrar_em_contato">
-                            <h1>Entrar em Contato</h1>
-                            <input type="text" placeholder="Nome">
-                            <br>
-
-                            <input type="text" placeholder="Email">
-                            <br>
-
-                            <input type="text" placeholder="Telefone">
-                            <br><br>
-
-                            <a href="">Enviar</a>
+    <main>
+        <!-- area do forms -->
+        <div class="form-area">
+            <div class="container">
+                <div class="row single-form g-0">
+                    <div class="col-sm-12 col-lg-6">
+                        <!-- esquerda do forms -->
+                        <div class="esq">
+                            <img src="imagens/RECEITAS PELO MUNDO.png" alt="" id="logoCont">
                         </div>
-    
+                    </div>
+                    <!-- direita do forms -->
+                    <div class="col-sm-12 col-lg-6">
+                        <div class="dir">
+                            <i class="fa fa-caret-left"></i>
+                            <form>
+                                <!-- conteudo do forms -->
+                                <!-- label nome -->
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">Nome:</label>
+                                    <input type="text" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+                                </div>
+                                <!-- label email -->
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">Email:</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+                                </div>
+                                <!-- label mensagem -->
+                                <div class="mb-3">
+                                    <label for="exampleInputPassword1" class="form-label">Mensagem:</label>
+                                    <textarea type="password" class="form-control"
+                                        id="exampleInputPassword1"></textarea>
+                                </div>
+                                <!-- botão enviar -->
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </main>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+    </main>
+    <footer>
+        <!-- links footer -->
+        <h3 class="central">Links Uteis</h3>
+        <br>
+        <section id="footerLinks" class="d-flex justify-content-around">
+            <a href="">
+                <h5>(19) 99354-1162</h5>
+            </a>
+            <a href="">
+                <h5>Receitas deliciosas</h5>
+            </a>
+            <a href="">
+                <h5>Receitas Diversas</h5>
+            </a>
+        </section>
+        <br>
+        <section id="footerLinks" class="d-flex justify-content-around">
+            <a href="">
+                <h5>Politica de privacidade</h5>
+            </a>
+            <a href="">
+                <h5>Termos de uso</h5>
+            </a>
+        </section>
+        <br>
+        <hr>
+        <!-- logo footer -->
+        <div id="logoFooter"><img src="imagens/RECEITAS PELO MUNDO.png" alt=""></div>
+        <section id="footerLinks" class="d-flex justify-content-around">
+            <a href="">
+                <h6>Este projeto é desenvolvido em conjunto com a disciplina de Programação Web I da Etec Polivalente de
+                    Americana e tem como a finalidade de estudar e aprofundar os conhecimentos em HTML, CSS e JS</h6>
+            </a>
+        </section>
+        <br>
+    </footer>
+
 </body>
+
 </html>
